--- a/_dev/pug/part/_base.pug
+++ b/_dev/pug/part/_base.pug
@@ -10,15 +10,15 @@ html(lang="ru")
     meta(name="description" content= desc )
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1")
-    link(rel="icon" href="/fav/favicon.ico" type="image/x-icon")
-    link(rel="apple-touch-icon" sizes="180x180" href="/fav/apple-touch-icon.png")
-    link(rel="icon" type="image/png" sizes="32x32" href="/fav/favicon-32x32.png")
-    link(rel="icon" type="image/png" sizes="16x16" href="/fav/favicon-16x16.png")
-    link(rel="manifest" href="/fav/site.webmanifest")
-    link(rel="mask-icon" href="/fav/safari-pinned-tab.svg" color="#292b34")
+    link(rel="icon" href="../fav/favicon.ico" type="image/x-icon")
+    link(rel="apple-touch-icon" sizes="180x180" href="../fav/apple-touch-icon.png")
+    link(rel="icon" type="image/png" sizes="32x32" href="../fav/favicon-32x32.png")
+    link(rel="icon" type="image/png" sizes="16x16" href="../fav/favicon-16x16.png")
+    link(rel="manifest" href="../fav/site.webmanifest")
+    link(rel="mask-icon" href="../fav/safari-pinned-tab.svg" color="#292b34")
     meta(name="msapplication-TileColor" content="#292b34")
     meta(name="theme-color" content="#292b34")
-    link(rel='stylesheet', href='/css/common.css')
+    link(rel='stylesheet', href='../css/common.css')
 
   body
     .page
@@ -35,6 +35,6 @@ html(lang="ru")
 
   //- block form
 
-  script(src='/js/vendors/jquery-3.4.1.min.js')
-  script(src='/js/main.js')
+  script(src='../js/vendors/jquery-3.4.1.min.js')
+  script(src='../js/main.js')
   //- script(src='js/hot-bundle.js')
