--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1253,6 +1253,47 @@ img {
   }
 }
 
+.header-page {
+  position: fixed;
+  width: 100%;
+  z-index: 100;
+  padding: 40px 0;
+  border-bottom: 1px solid #4e5768;
+}
+
+.header-page__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media (min-width: 540px) {
+  .header-page__wrap .menu__item {
+    padding: 0 20px;
+  }
+}
+
+.section--full {
+  min-height: 100vh;
+  padding: 120px 0 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 .swiper-container-fade .swiper-slide:not(.swiper-slide-active) {
   opacity: 0 !important;
 }
