--- a/_dev/pug/mixin/_helpers.pug
+++ b/_dev/pug/mixin/_helpers.pug
@@ -1,5 +1,5 @@
-- var svgSpriteMono = '/img/sprite-mono.svg'
-- var svgSpriteColor = '/img/sprite-color.svg'
+- var svgSpriteMono = '../img/sprite-mono.svg'
+- var svgSpriteColor = '../img/sprite-color.svg'
 
 mixin svgMono(name, modClass)
   if modClass == undefined
