--- a/_dev/pug/part/_nav.pug
+++ b/_dev/pug/part/_nav.pug
@@ -2,7 +2,7 @@
   .container.__wrap
     .b-logo.__logo
       a(href="/").__link
-        img(src="../../img/logo.svg", alt="SaveToFuture").__img
+        img(src="../img/logo.svg", alt="SaveToFuture").__img
     nav.nav.__nav
       -
         var menudata = $i18n.glob.nav.company.link
