--- a/_dev/sass/block/_card.sass
+++ b/_dev/sass/block/_card.sass
@@ -97,14 +97,46 @@
   content: "0" counter(cases)
 
 .work-list
+  counter-reset: work
   &__item
     max-width: 540px
+    counter-increment: work
     +r(sm)
       &:nth-child(even)
         margin-left: auto
+
+  &__txt-wrap
+    position: relative
+
   &__txt
     font-size: 20px
-    padding: 20px 0 140px 80px
+    font-weight: 100
+    padding: 20px 0 100px 80px
+  &__counter
+    position: absolute
+    left: 0
+    bottom: 0
+    font-size: 30px
+    line-height: 70px
+    text-align: center
+    width: 70px
+    height: 70px
+    background-color: $c-main
+    border: 1px solid
+    border-radius: 50%
+    &:before
+      content: counter(work)
   &__img
-    margin: 20px
+    margin: 40px auto
     max-width: 70%
+
+#svg-work-line
+  position: absolute
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  path
+    fill: transparent
+    stroke: #fff
+    stroke-width: 3px
