--- a/_dev/sass/common.sass
+++ b/_dev/sass/common.sass
@@ -17,12 +17,12 @@
 @import "./generated/_sprite-svg-mono"
 // @import "vendor/_jquery.formstyler.scss"
 
-@import "../../node_modules/swiper/swiper-bundle"
+// @import "../../node_modules/swiper/swiper-bundle"
 
-// @import "../../node_modules/swiper/swiper-vars"
-// @import "../../node_modules/swiper/swiper"
-// @import "../../node_modules/swiper/components/effect-fade/effect-fade.scss"
-// @import "../../node_modules/swiper/components/pagination/pagination.scss"
+@import "../../node_modules/swiper/swiper-vars"
+@import "../../node_modules/swiper/swiper"
+@import "../../node_modules/swiper/components/effect-fade/effect-fade.scss"
+@import "../../node_modules/swiper/components/pagination/pagination.scss"
 
 @import "block/**/*"
 
