--- a/_dev/sass/block/_card.sass
+++ b/_dev/sass/block/_card.sass
@@ -96,22 +96,31 @@
 .cases .counter:before
   content: "0" counter(cases)
 
+.work__wrap
+  background: url("../../img/workline-lg.svg") top center no-repeat
+
 .work-list
   counter-reset: work
   &__item
-    max-width: 540px
+    width: 360px
     counter-increment: work
-    +r(sm)
-      &:nth-child(even)
-        margin-left: auto
+    &:nth-child(even)
+      margin-left: auto
+    +r(md)
+      width: 460px
+    +r(xl)
+      width: 540px
 
   &__txt-wrap
     position: relative
 
   &__txt
-    font-size: 20px
     font-weight: 100
-    padding: 20px 0 100px 80px
+    height: 180px
+    padding: 20px 20px 20px 80px
+    font-size: 18px
+    +r(lg)
+      font-size: 20px
   &__counter
     position: absolute
     left: 0
@@ -130,13 +139,14 @@
     margin: 40px auto
     max-width: 70%
 
-#svg-work-line
-  position: absolute
-  top: 0
-  left: 0
-  width: 100%
-  height: 100%
-  path
-    fill: transparent
-    stroke: #fff
-    stroke-width: 3px
+
+// #svg-work-line
+//   position: absolute
+//   top: 0
+//   left: 0
+//   width: 100%
+//   height: 100%
+//   path
+//     fill: transparent
+//     stroke: #fff
+//     stroke-width: 3px
