--- a/_dev/pug/mixin/_helpers.pug
+++ b/_dev/pug/mixin/_helpers.pug
@@ -33,8 +33,8 @@ mixin icon(name,mod)
             name : 'Контакты2', link: '#test'
           }]}
 //-     +menu()
-mixin menu()
-  ul.menu
+mixin menu(menudata, mod)
+  ul.menu(class= mod)
     each item in menudata
       li.menu__item(class=(current === item.name || section === item.name ? "active" : undefined) class=(item.sub)? "parent" : undefined)
         a.menu__link(href=item.url) #{item.name}
