--- a/_dev/pug/part/_nav.pug
+++ b/_dev/pug/part/_nav.pug
@@ -2,11 +2,14 @@
   .container.__wrap
     .b-logo.__logo
       a(href="/").__link
-        img(src="../img/logo.svg", alt="SaveToFuture").__img
+        picture.__img
+          source(media="(max-width: 540px)" srcset="../img/logo_short.svg")
+          source(media="(min-width: 541px)" srcset="../img/logo.svg")
+          img(src="../img/logo.svg", alt="SaveToFuture")
     nav.nav.__nav
       -
         var menudata = $i18n.glob.nav.company.link
-      +menu()
+      +menu(menudata, "menu--header")
 
     .__side
       .b-lang-swith
@@ -15,6 +18,11 @@
           +svgMono("world")
 
       .__member
-        a(href="").b-btn.--light SIGN IN
+        a(href="").b-btn.--fill SIGN IN
 
     .burger
+      span
+      span
+      span
+
+.mob-nav
