--- a/_dev/sass/block/_nav.sass
+++ b/_dev/sass/block/_nav.sass
@@ -1,6 +1,5 @@
 .lang-swith
-  +r(md)
-    margin-right: 40px
+  margin-right: 40px
   &__control
     cursor: pointer
     .ico
@@ -12,12 +11,36 @@
     text-decoration: dashed
 
 .burger
-  +r(md)
+  position: relative
+  width: 24px
+  height: 24px
+  transition: 0.5s ease
+  margin-left: 40px
+  +r(lg)
     display: none
+  span
+    background: #fff
+    display: block
+    width: 100%
+    height: 2px
+    transition: 0.4s ease
+    &:not(:first-child)
+      margin-top: 6px
+  &.open
+    transform: rotatey(180deg)
+    span
+      transform: rotatey(180deg) rotatex(360deg)
+      &:first-child
+        transform: rotate(-45deg)
+        margin-top: 10px
+      &:nth-child(2)
+        opacity: 0
+      &:nth-child(3)
+        margin-top: -10px
+        transform: rotate(45deg)
 
 .menu
   display: flex
-  flex-direction: column
   padding: 0
   margin: 0
   list-style: none
@@ -26,5 +49,50 @@
     transition: color .2s
     &:hover
       color: $c-brand
-  +r(sm)
-    flex-direction: row
+
+.menu--footer
+  flex-direction: column
+  .menu__link
+    display: block
+    padding: 0 0 1em
+
+.mob-nav
+  position: fixed
+  overflow: auto
+  right: 0
+  top: 0
+  width: 200px
+  margin: 80px 20px 0 0
+  padding:  10px
+  background-color: $c-main
+  z-index: 100
+  box-shadow: 0 0 10px rgba(#000, .5)
+  opacity: 0
+  visibility: hidden
+  transition: all .5s
+  +r(lg)
+    display: none
+  .menu
+    flex-direction: column
+  .menu__link
+    display: block
+    padding: 15px 20px
+  .lang-swith
+    padding: 15px 20px
+    margin: 0
+
+body.mob-nav-open
+  +rmax(lg)
+    overflow: hidden
+    .mob-nav
+      opacity: 1
+      visibility: visible
+    &:before
+      content: ""
+      position: fixed
+      width: 100%
+      height: 100%
+      left: 0
+      top: 0
+      background-color: rgba($c-main,.9)
+      z-index: 50
