--- a/_dev/sass/block/_page.sass
+++ b/_dev/sass/block/_page.sass
@@ -1,21 +1,53 @@
 .header-page
-  position: fixed
   width: 100%
   z-index: 100
-  padding: 40px 0
   border-bottom: 1px solid #4e5768
+  padding: 40px 0
+  transition: all .2s
+  position: fixed
+  z-index: 200
+  &.sticky
+    padding: 10px 0
+    background-color: $c-main
+  +rmax(lg)
+    padding: 10px 0
   &__wrap
     display: flex
     justify-content: space-between
     align-items: center
     .menu__item
-      +r(sm)
+      +r(lg)
         padding: 0 20px
-
-.section
-  &--full
-    min-height: 100vh
-    padding: 120px 0 40px
+  &__logo
+    +rmax(sm)
+      width: 20px
+  &__side
     display: flex
-    flex-direction: column
-    justify-content: center
+    align-items: center
+    +rmax(lg)
+      margin-left: auto
+
+  .menu,
+  .lang-swith
+    +rmax(lg)
+      display: none
+
+
+.footer-title
+  margin: 0 0 2em
+  font-size: 16px
+  font-weight: bold
+
+.footer-page
+  font-weight: 300
+  padding: 80px 0
+  &__wrap
+    display: grid
+    column-gap: 10%
+    grid-template-columns: auto 1fr
+  &__aside
+    grid-row: span 2
+    display: grid
+    grid-template-columns: repeat(3, 1fr)
+  &__soc
+    align-self: end
