--- a/_dev/pug/part/_base.pug
+++ b/_dev/pug/part/_base.pug
@@ -33,7 +33,7 @@ html(lang="ru")
 
 
   //- block form
-
-  script(src='../js/vendors/jquery-3.4.1.min.js')
+    //- script(src='../js/vendors/jquery-3.4.1.min.js')
   script(src='../js/main.js')
+  block scripts
   //- script(src='js/hot-bundle.js')
