--- a/_dev/sass/block/_page.sass
+++ b/_dev/sass/block/_page.sass
@@ -41,13 +41,39 @@
 .footer-page
   font-weight: 300
   padding: 80px 0
+  border-top: 1px solid #4E5768
   &__wrap
     display: grid
-    column-gap: 10%
-    grid-template-columns: auto 1fr
+    justify-items: cwnter
+    text-align: center
+    +r(sm)
+      text-align: left
+    +r(lg)
+      column-gap: 10%
+      grid-template-columns: auto 1fr
   &__aside
-    grid-row: span 2
+    grid-row: span 3
+    row-gap: 60px
     display: grid
-    grid-template-columns: repeat(3, 1fr)
+    +r(sm)
+      grid-template-columns: repeat(3, 1fr)
+    +rmax(lg)
+      margin-bottom: 60px
+  &__logo
+    margin-bottom: 60px
+    +rmax(sm)
+      order: -2
   &__soc
     align-self: end
+    justify-self: center
+    +rmax(sm)
+      margin-bottom: 40px
+      order: -1
+    +r(lg)
+      justify-self: start
+
+.copyright
+  font-weight: normal
+  justify-self: center
+  +r(lg)
+    justify-self: start
