--- a/public/css/common.css
+++ b/public/css/common.css
@@ -77,7 +77,6 @@ video {
 img {
   border-style: none;
   max-width: 100%;
-  display: block;
   outline: none !important;
 }
 
@@ -609,111 +608,123 @@ button.swiper-pagination-bullet {
   background-color: #fff;
 }
 
-@media (max-width: 540px) {
+@media (max-width: 650px) {
   .separator {
     margin: 30px auto;
   }
 }
 
-.intro__wrap {
+.section-footer {
+  text-align: center;
+  font-weight: 300;
+  margin: 100px auto 0;
+  max-width: 540px;
+  font-size: 16px;
+}
+
+@media (min-width: 650px) {
+  .section-footer {
+    font-size: 20px;
+  }
+}
+
+.section-footer__txt {
+  margin-bottom: 40px;
+}
+
+.card {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: 1fr;
   grid-gap: 40px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  text-align: center;
 }
 
-@media (max-width: 540px) {
-  .intro__wrap {
-    text-align: center;
-    justify-items: center;
+@media (min-width: 650px) {
+  .card {
+    text-align: left;
+    grid-template-columns: 1fr 1fr;
   }
 }
 
-@media (min-width: 540px) {
-  .intro__img {
+@media (min-width: 992px) {
+  .card {
+    -webkit-column-gap: 100px;
+       -moz-column-gap: 100px;
+            column-gap: 100px;
+  }
+}
+
+@media (min-width: 650px) {
+  .card__img {
     justify-self: end;
   }
 }
 
-@media (max-width: 540px) {
-  .intro__img {
+@media (max-width: 650px) {
+  .card__img {
     -webkit-box-ordinal-group: 0;
         -ms-flex-order: -1;
             order: -1;
   }
 }
 
-.intro__img img {
+.card__img img {
   width: 400px;
 }
 
-@media (max-width: 540px) {
-  .intro__img img {
+@media (max-width: 650px) {
+  .card__img img {
     max-width: 70%;
     margin: auto;
   }
-}
-
-.intro__title {
-  line-height: 1.2;
-  font-weight: normal;
-  margin: 0 0 1.2em;
-  font-size: 20px;
-}
-
-@media (min-width: 540px) {
-  .intro__title {
-    font-size: 32px;
-  }
-}
-
-.intro__txt {
-  color: #9c9ea3;
-  margin-bottom: 90px;
-  font-size: 16px;
-}
-
-@media (min-width: 540px) {
-  .intro__txt {
-    font-size: 20px;
-  }
-}
-
-.card {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 100px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.card__img {
-  justify-self: center;
-}
-
-.card__img img {
-  width: 400px;
 }
 
 .card__title {
   font-size: 22px;
   margin: 0 0 2em;
   line-height: 1.2;
+  font-size: 20px;
+}
+
+@media (min-width: 768px) {
+  .card__title {
+    font-size: 28px;
+  }
+}
+
+@media (min-width: 992px) {
+  .card__title {
+    font-size: 32px;
+  }
 }
 
 .card__txt {
   font-weight: 300;
   color: #9c9ea3;
-  font-size: 20px;
+  font-size: 16px;
+}
+
+@media (min-width: 768px) {
+  .card__txt {
+    font-size: 20px;
+  }
 }
 
 .card__txt-list {
   margin: 0;
   padding: 0;
   list-style: none;
+  text-align: left;
+}
+
+@media (max-width: 650px) {
+  .card__txt-list {
+    max-width: 70%;
+    justify-self: center;
+  }
 }
 
 .card__txt-list li {
@@ -740,18 +751,11 @@ button.swiper-pagination-bullet {
   margin-top: 80px;
 }
 
-.counter {
-  font-size: 30px;
-  font-weight: 100;
-  color: #fff;
-  margin-bottom: 1em;
+.card-list .card:not(:last-child) {
+  margin-bottom: 100px;
 }
 
-.card-list .card {
-  margin-bottom: 200px;
-}
-
-@media (min-width: 540px) {
+@media (min-width: 650px) {
   .card-list .card:nth-child(even) .card__img {
     -webkit-box-ordinal-group: 0;
         -ms-flex-order: -1;
@@ -759,24 +763,30 @@ button.swiper-pagination-bullet {
   }
 }
 
-.service .card {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 0 100px;
+@media (min-width: 992px) {
+  .intro .card__title {
+    font-size: 32px;
+  }
 }
 
-.service .card .card__img {
-  grid-row: span 2;
+@media (min-width: 650px) {
+  .service .card .card__img {
+    grid-row: span 2;
+  }
 }
 
-.service .card .card__title-wrap {
-  -ms-flex-item-align: end;
-      align-self: end;
+@media (min-width: 650px) {
+  .service .card .card__title-wrap {
+    -ms-flex-item-align: end;
+        align-self: end;
+  }
 }
 
-.service .card .card__txt-list {
-  -ms-flex-item-align: start;
-      align-self: start;
+@media (min-width: 650px) {
+  .service .card .card__txt-list {
+    -ms-flex-item-align: start;
+        align-self: start;
+  }
 }
 
 .cases {
@@ -787,19 +797,22 @@ button.swiper-pagination-bullet {
   counter-increment: cases;
 }
 
-.cases__footer {
-  text-align: center;
-  font-weight: 300;
-  font-size: 20px;
-  margin: auto;
-  max-width: 540px;
+@media (max-width: 650px) {
+  .cases .card__img {
+    -webkit-box-ordinal-group: 11;
+        -ms-flex-order: 10;
+            order: 10;
+  }
 }
 
-.cases__footer-txt {
-  margin-bottom: 40px;
+.cases__counter {
+  font-size: 30px;
+  font-weight: 100;
+  color: #fff;
+  margin-bottom: 1em;
 }
 
-.cases .counter:before {
+.cases__counter:before {
   content: "0" counter(cases);
 }
 
@@ -812,15 +825,15 @@ button.swiper-pagination-bullet {
 }
 
 .work-list__item {
-  width: 360px;
   counter-increment: work;
+  margin-bottom: 100px;
 }
 
 .work-list__item:nth-child(even) {
   margin-left: auto;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 650px) {
   .work-list__item {
     width: 460px;
   }
@@ -838,9 +851,9 @@ button.swiper-pagination-bullet {
 
 .work-list__txt {
   font-weight: 100;
-  height: 180px;
-  padding: 20px 20px 20px 80px;
-  font-size: 18px;
+  padding: 0 20px 20px 80px;
+  font-size: 16px;
+  height: 138px;
 }
 
 @media (min-width: 992px) {
@@ -851,20 +864,56 @@ button.swiper-pagination-bullet {
 
 .work-list__counter {
   position: absolute;
+  z-index: 1;
   left: 0;
   bottom: 0;
-  font-size: 30px;
-  line-height: 70px;
+  font-size: 20px;
+  line-height: 50px;
   text-align: center;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-color: #2e3542;
   border: 1px solid;
   border-radius: 50%;
 }
 
+@media (min-width: 992px) {
+  .work-list__counter {
+    font-size: 30px;
+    line-height: 70px;
+    width: 70px;
+    height: 70px;
+  }
+}
+
 .work-list__counter:before {
   content: counter(work);
+}
+
+.work-list__border {
+  position: absolute;
+  bottom: 0;
+  left: 25px;
+  height: 100%;
+  width: 1px;
+  background-color: #fff;
+}
+
+@media (min-width: 992px) {
+  .work-list__border {
+    left: 35px;
+  }
+}
+
+.work-list__border:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -4px;
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  background-color: #fff;
 }
 
 .work-list__img {
@@ -897,9 +946,12 @@ img {
   padding: 0 20px;
 }
 
+.section {
+  padding: 120px 0;
+}
+
 .section--full {
   min-height: 100vh;
-  padding: 120px 0 40px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -973,13 +1025,13 @@ img {
 }
 
 .title-section {
-  font-weight: normal;
+  font-weight: bold;
   text-align: center;
   font-size: 20px;
-  margin-bottom: 2em;
+  margin-bottom: 4em;
 }
 
-@media (min-width: 540px) {
+@media (min-width: 650px) {
   .title-section {
     margin-bottom: 120px;
     font-size: 26px;
@@ -992,7 +1044,8 @@ img {
   font-size: .8em;
   color: #9c9ea3;
   font-weight: normal;
-  margin-top: 1em;
+  margin: 1em auto 0;
+  max-width: 460px;
 }
 
 .soc {
@@ -1021,10 +1074,6 @@ img {
 
 .soc__link:active {
   background-color: rgba(255, 255, 255, 0.5);
-}
-
-.copyright {
-  font-weight: normal;
 }
 
 .lang-swith {
@@ -1242,7 +1291,7 @@ img {
   }
 }
 
-@media (max-width: 540px) {
+@media (max-width: 650px) {
   .header-page__logo {
     width: 20px;
   }
@@ -1279,25 +1328,90 @@ img {
 .footer-page {
   font-weight: 300;
   padding: 80px 0;
+  border-top: 1px solid #4E5768;
 }
 
 .footer-page__wrap {
   display: grid;
-  -webkit-column-gap: 10%;
-     -moz-column-gap: 10%;
-          column-gap: 10%;
-  grid-template-columns: auto 1fr;
+  justify-items: cwnter;
+  text-align: center;
+}
+
+@media (min-width: 650px) {
+  .footer-page__wrap {
+    text-align: left;
+  }
+}
+
+@media (min-width: 992px) {
+  .footer-page__wrap {
+    -webkit-column-gap: 10%;
+       -moz-column-gap: 10%;
+            column-gap: 10%;
+    grid-template-columns: auto 1fr;
+  }
 }
 
 .footer-page__aside {
-  grid-row: span 2;
+  grid-row: span 3;
+  row-gap: 60px;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+}
+
+@media (min-width: 650px) {
+  .footer-page__aside {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 992px) {
+  .footer-page__aside {
+    margin-bottom: 60px;
+  }
+}
+
+.footer-page__logo {
+  margin-bottom: 60px;
+}
+
+@media (max-width: 650px) {
+  .footer-page__logo {
+    -webkit-box-ordinal-group: -1;
+        -ms-flex-order: -2;
+            order: -2;
+  }
 }
 
 .footer-page__soc {
   -ms-flex-item-align: end;
       align-self: end;
+  justify-self: center;
+}
+
+@media (max-width: 650px) {
+  .footer-page__soc {
+    margin-bottom: 40px;
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+  }
+}
+
+@media (min-width: 992px) {
+  .footer-page__soc {
+    justify-self: start;
+  }
+}
+
+.copyright {
+  font-weight: normal;
+  justify-self: center;
+}
+
+@media (min-width: 992px) {
+  .copyright {
+    justify-self: start;
+  }
 }
 
 .swiper-container-fade .swiper-slide:not(.swiper-slide-active) {
@@ -1315,8 +1429,24 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-bottom: 120px;
   bottom: 0;
+  margin-bottom: 40px;
+}
+
+@media (min-width: 650px) {
+  .service .swiper-pagination {
+    margin-bottom: 80px;
+  }
+}
+
+@media (min-width: 992px) {
+  .service .swiper-pagination {
+    margin-bottom: 120px;
+  }
+}
+
+.service .swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
+  margin: 0;
 }
 
 .service .pagination-icon:nth-child(1) .pagination-icon__wrap:before {
@@ -1341,9 +1471,9 @@ img {
   border-radius: 0;
   opacity: 1;
   background: transparent;
-  -webkit-box-flex: 2;
-      -ms-flex: 2 1 auto;
-          flex: 2 1 auto;
+  -webkit-box-flex: 1.25;
+      -ms-flex: 1.25 1 auto;
+          flex: 1.25 1 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1352,10 +1482,18 @@ img {
           align-items: center;
 }
 
+@media (min-width: 480px) {
+  .service .pagination-icon {
+    -webkit-box-flex: 2;
+        -ms-flex: 2 1;
+            flex: 2 1;
+  }
+}
+
 .service .pagination-icon:last-child {
   -webkit-box-flex: 1;
-      -ms-flex: 1 1;
-          flex: 1 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
 }
 
 .service .pagination-icon:last-child .pagination-icon__timer {
@@ -1363,12 +1501,34 @@ img {
 }
 
 .service .pagination-icon__wrap {
-  max-width: 120px;
-  min-width: 40px;
   position: relative;
-  -webkit-box-flex: 2;
-      -ms-flex: 2 1;
-          flex: 2 1;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 50px;
+          flex: 0 0 50px;
+}
+
+@media (min-width: 480px) {
+  .service .pagination-icon__wrap {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 60px;
+            flex: 0 0 60px;
+  }
+}
+
+@media (min-width: 650px) {
+  .service .pagination-icon__wrap {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 80px;
+            flex: 0 0 80px;
+  }
+}
+
+@media (min-width: 992px) {
+  .service .pagination-icon__wrap {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 120px;
+            flex: 0 0 120px;
+  }
 }
 
 .service .pagination-icon__wrap:before {
@@ -1390,13 +1550,25 @@ img {
       -ms-flex: 1 1;
           flex: 1 1;
   background-color: #fff;
-  margin: 0 30px;
   border-radius: 2px;
   background: -webkit-gradient(linear, left top, right top, color-stop(50%, #e41139), color-stop(50%, #fff)) no-repeat;
   background: -o-linear-gradient(left, #e41139 50%, #fff 50%) no-repeat;
   background: linear-gradient(to right, #e41139 50%, #fff 50%) no-repeat;
   background-size: 200% auto;
   background-position-x: 101%;
+  margin: 0 5px;
+}
+
+@media (min-width: 650px) {
+  .service .pagination-icon__timer {
+    margin: 0 20px;
+  }
+}
+
+@media (min-width: 992px) {
+  .service .pagination-icon__timer {
+    margin: 0 30px;
+  }
 }
 
 .process .swiper-pagination-bullet-active .pagination-icon__timer {
@@ -1479,6 +1651,54 @@ img {
     -webkit-transform: scale(1);
             transform: scale(1);
   }
+}
+
+.price-carts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
+.price-cart {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1;
+          flex: 1 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  border-radius: 5px;
+}
+
+.price-cart:not(:last-child) {
+  margin-right: 40px;
+}
+
+.price-cart__img {
+  padding: 60px 0;
+  margin: auto;
+}
+
+.price-cart__cost {
+  margin-bottom: 60px;
+  font-size: 24px;
+}
+
+.price-cart__small {
+  font-size: .7em;
+}
+
+.price-cart__footer {
+  padding: 30px;
+  text-align: center;
+  background-color: #1F2633;
 }
 
 /*# sourceMappingURL=common.css.map */
