--- a/_dev/pug/index.pug
+++ b/_dev/pug/index.pug
@@ -94,4 +94,5 @@ block content
           img(src="../img/content/data-icon.png", alt="")
 //- Content page_______________________________________
 block scripts
+  script(src='../js/vendor.js')
   script(src='../js/index.js')
