--- a/_dev/sass/_var.scss
+++ b/_dev/sass/_var.scss
@@ -17,6 +17,7 @@ $lg: $l-g;
 $c-main: #2e3542;
 $c-brand: #e41139;
 $c-sec: #9c9ea3;
+$c-dark: #1f2633;
 $c-text: #fff;
 $c-link: inherit;
 $c-active: $c-brand;
