--- a/_dev/sass/block/_global.sass
+++ b/_dev/sass/block/_global.sass
@@ -5,6 +5,8 @@
 
 body
   background: $c-main
+  +rmax(sm)
+    font-size: 14px
 
 img
   max-width: 100%
@@ -26,6 +28,11 @@ img
     justify-content: center
   &__footer
     margin-top: 80px
+    text-align: center
+
+.btn-wrap
+  margin-top: 120px
+  &--center
     text-align: center
 
 .btn
@@ -115,8 +122,8 @@ img
   font-weight: bold
   text-align: center
   font-size: 20px
-  margin-bottom: 4em
-  +r(sm)
+  margin-bottom: 2em
+  +r(lg)
     margin-bottom: 120px
     font-size: 26px
 
@@ -128,6 +135,29 @@ img
   font-weight: normal
   margin: 1em auto 0
   max-width: 460px
+
+.ul-list
+  margin: 0
+  padding: 0
+  list-style: none
+  &__item
+    padding-left: 30px
+    margin-bottom: 1.5em
+    position: relative
+    +r(lg)
+      font-size: 20px
+    &:before
+      content: ""
+      display: block
+      position: absolute
+      top: .5em
+      left: 0
+      margin-right: 20px
+      width: .5em
+      height: .5em
+      border-radius: 50%
+      background-color: #fff
+      vertical-align: middle
 
 .soc
   margin-bottom: 40px
@@ -150,6 +180,7 @@ img
 
 .range
   width: 100%
+  margin: 0
   background-color: transparent
   -webkit-appearance: none
   &:focus
@@ -158,16 +189,28 @@ img
 .range-wrap
   position: relative
 
+.range-sel
+  pointer-events: none
+  position: absolute
+  top: 50%
+  left: 0
+  width: 0%
+  height: 4px
+  background: $c-brand
+  border-radius: 2px
+
 .bubble
   position: absolute
   background-color: #fff
   padding: 10px
+  top: 30px
   font-size: 14px
   border-radius: 10px
   color: #000
   z-index: 100
   transition: all .2s
   user-select: none
+  white-space: nowrap
 
 input[type=range]::-webkit-slider-runnable-track
   -webkit-appearance: none
