--- a/_dev/sass/mixin/_media.scss
+++ b/_dev/sass/mixin/_media.scss
@@ -26,7 +26,7 @@
 @mixin rm($breakpoint-min, $breakpoint-max) {
   // If the key exists in the map
   // Prints a media query based on the value
-  @if map-has-key($breakpoints, $breakpoint) {
+  @if map-has-key($breakpoints, $breakpoint-min) {
     @media (min-width: map-get($breakpoints, $breakpoint-min)) and (max-width: map-get($breakpoints, $breakpoint-max)) {
       @content;
     }
