--- a/public/css/common.css
+++ b/public/css/common.css
@@ -143,31 +143,37 @@ svg {
 .ico-mono-arrow-right {
   width: 2em;
   height: 1em;
-  fill: #fff;
+  fill: currentColor;
+}
+
+.ico-mono-arrow {
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
 }
 
 .ico-mono-soc-fb {
   width: 1em;
   height: 1em;
-  fill: #fff;
+  fill: currentColor;
 }
 
 .ico-mono-soc-tw {
   width: 1em;
   height: 1em;
-  fill: #fff;
+  fill: currentColor;
 }
 
 .ico-mono-soc-youtube {
   width: 1em;
   height: 1em;
-  fill: #fff;
+  fill: currentColor;
 }
 
 .ico-mono-world {
   width: 1em;
   height: 1em;
-  fill: #fff;
+  fill: currentColor;
 }
 
 @font-face {
@@ -932,6 +938,12 @@ body {
   background: #2e3542;
 }
 
+@media (max-width: 650px) {
+  body {
+    font-size: 14px;
+  }
+}
+
 img {
   max-width: 100%;
 }
@@ -966,6 +978,14 @@ img {
 
 .section__footer {
   margin-top: 80px;
+  text-align: center;
+}
+
+.btn-wrap {
+  margin-top: 120px;
+}
+
+.btn-wrap--center {
   text-align: center;
 }
 
@@ -1107,10 +1127,10 @@ img {
   font-weight: bold;
   text-align: center;
   font-size: 20px;
-  margin-bottom: 4em;
+  margin-bottom: 2em;
 }
 
-@media (min-width: 650px) {
+@media (min-width: 992px) {
   .title-section {
     margin-bottom: 120px;
     font-size: 26px;
@@ -1125,6 +1145,38 @@ img {
   font-weight: normal;
   margin: 1em auto 0;
   max-width: 460px;
+}
+
+.ul-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.ul-list__item {
+  padding-left: 30px;
+  margin-bottom: 1.5em;
+  position: relative;
+}
+
+@media (min-width: 992px) {
+  .ul-list__item {
+    font-size: 20px;
+  }
+}
+
+.ul-list__item:before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: .5em;
+  left: 0;
+  margin-right: 20px;
+  width: .5em;
+  height: .5em;
+  border-radius: 50%;
+  background-color: #fff;
+  vertical-align: middle;
 }
 
 .soc {
@@ -1157,6 +1209,7 @@ img {
 
 .range {
   width: 100%;
+  margin: 0;
   background-color: transparent;
   -webkit-appearance: none;
 }
@@ -1169,10 +1222,22 @@ img {
   position: relative;
 }
 
+.range-sel {
+  pointer-events: none;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 0%;
+  height: 4px;
+  background: #e41139;
+  border-radius: 2px;
+}
+
 .bubble {
   position: absolute;
   background-color: #fff;
   padding: 10px;
+  top: 30px;
   font-size: 14px;
   border-radius: 10px;
   color: #000;
@@ -1184,6 +1249,7 @@ img {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+  white-space: nowrap;
 }
 
 input[type=range]::-webkit-slider-runnable-track {
@@ -1784,12 +1850,147 @@ input[type=range]::-webkit-slider-thumb {
   }
 }
 
+.acc__item {
+  margin-bottom: 20px;
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
+.acc__header {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+  padding: 20px 60px 20px 10px;
+}
+
+@media (min-width: 650px) {
+  .acc__header {
+    padding-left: 20px;
+  }
+}
+
+.acc__header-img {
+  position: relative;
+  background-color: #1f2633;
+  margin-right: 20px;
+  border-radius: 50%;
+  height: 48px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 48px;
+          flex: 0 0 48px;
+}
+
+@media (min-width: 650px) {
+  .acc__header-img {
+    height: 70px;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 70px;
+            flex: 0 0 70px;
+    margin-right: 30px;
+  }
+}
+
+.acc__header-img img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  max-width: 60%;
+}
+
+.acc__header-title {
+  font-size: 16px;
+  margin: 0;
+  font-weight: bold;
+}
+
+@media (max-width: 480px) {
+  .acc__header-title {
+    font-size: 16px;
+  }
+}
+
+@media (min-width: 650px) {
+  .acc__header-title {
+    font-size: 20px;
+  }
+}
+
+.acc__control-ico {
+  position: absolute;
+  color: #fff;
+  top: 50%;
+  right: 10px;
+  line-height: 0;
+  font-size: 20px;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  -webkit-transition: all .1s;
+  -o-transition: all .1s;
+  transition: all .1s;
+}
+
+@media (min-width: 480px) {
+  .acc__control-ico {
+    right: 20px;
+  }
+}
+
+.acc__panel-inner {
+  padding: 20px;
+}
+
+.acc__panel {
+  background-color: #1f2633;
+  overflow: hidden;
+  height: 0;
+}
+
+.acc__panel p {
+  color: #9c9ea3;
+}
+
+.acc__panel-title {
+  margin: 0 0 1em;
+  font-size: 14px;
+}
+
+.acc__panel-title:not(:first-child) {
+  margin-top: 2em;
+}
+
+@media (min-width: 480px) {
+  .acc__panel-title {
+    font-size: 18px;
+  }
+}
+
+.acc-open .acc__control-ico {
+  -webkit-transform: translateY(-50%) rotate(180deg);
+      -ms-transform: translateY(-50%) rotate(180deg);
+          transform: translateY(-50%) rotate(180deg);
+}
+
 .price-carts {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
   -webkit-column-gap: 30px;
      -moz-column-gap: 30px;
           column-gap: 30px;
+  grid-template-columns: 1fr;
+}
+
+@media (min-width: 768px) {
+  .price-carts {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 .price-cart {
@@ -1803,6 +2004,7 @@ input[type=range]::-webkit-slider-thumb {
           flex-direction: column;
   text-align: center;
   border-radius: 5px;
+  margin-bottom: 20px;
 }
 
 .price-cart__img {
@@ -1825,23 +2027,117 @@ input[type=range]::-webkit-slider-thumb {
   background-color: #1F2633;
 }
 
-.reduction__items {
-  display: grid;
+@media (min-width: 450px) and (max-width: 767px) {
+  .price-cart {
+    text-align: left;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+  .price-cart__img {
+    grid-row: span 2;
+  }
+  .price-cart__cost {
+    margin-bottom: 0;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    -ms-flex-item-align: start;
+        align-self: start;
+  }
+  .price-cart__footer {
+    padding: 0;
+    text-align: left;
+    background-color: transparent;
+    font-size: 16px;
+    -ms-flex-item-align: end;
+        align-self: end;
+  }
+}
+
+.reduction__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 20px 40px;
-  grid-template-columns: auto 1fr;
+  margin-bottom: 1em;
+  width: 100%;
+}
+
+.reduction__item:nth-child(1) .reduction__procentage span {
+  width: 25%;
+  background-color: #515C70;
+}
+
+.reduction__item:nth-child(2) .reduction__procentage span {
+  width: 50%;
+  background-color: #627087;
+}
+
+.reduction__item:nth-child(3) .reduction__procentage span {
+  width: 75%;
+  background-color: #8692A9;
+}
+
+.reduction__title {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 130px;
+          flex: 0 0 130px;
+}
+
+@media (min-width: 650px) {
+  .reduction__title {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 150px;
+            flex: 0 0 150px;
+  }
+}
+
+.reduction__procentage {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1 1;
 }
 
 .reduction__procentage span {
   display: block;
   padding: 5px 10px;
   text-align: center;
+  background-color: #B7BFCF;
 }
 
-.reduction__procentage::nth-of-type(2) {
-  background-color: red;
+.courier__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.courier__list img {
+  margin: 0 15px 40px;
+}
+
+@media (min-width: 992px) {
+  .courier__list img {
+    margin-bottom: 60px;
+  }
+}
+
+@media (max-width: 650px) {
+  .courier__txt {
+    text-align: center;
+  }
 }
 
 .calc-form {
