--- a/_dev/pug/part/_footer.pug
+++ b/_dev/pug/part/_footer.pug
@@ -3,7 +3,7 @@ footer.b-footer-page
     .__wrap
       .__logo
         a(href="/" )
-          img(src="../../img/logo.svg", alt="SaveToFuture")
+          img(src="../img/logo.svg", alt="SaveToFuture")
       .__aside
         each menu, key in $i18n.glob.nav
           .__naw-wrap
